--- a/table.html
+++ b/table.html
@@ -41,9 +41,9 @@
                             <div class="m-3">
                                 <label for="" class="font-bold">Gender:</label>
                                 <br>
-                                <input  type="radio"> <span>Female</span>
-                                <input type="radio"> <span>Male</span>
-                                <input type="radio"> <span>Others</span>
+                                <input  type="radio" name="gender"> <span>Female</span>
+                                <input type="radio" name="gender"> <span>Male</span>
+                                <input type="radio" name="gender"> <span>Others</span>
                             </div>
                             <div class="m-3">
                                 <input class="cursor-pointer bg-red-300 w-full rounded font-bold" type="submit" value="submit" required>
