--- a/table.html
+++ b/table.html
@@ -8,9 +8,9 @@
     <title>table</title>
 </head>
 <body>
-            <div class="flex justify-center flex-wrap">
+            <div class="flex container p-8 mx-auto justify-center flex-wrap">
                 <div class="xs:w-full lg:w-1/2">
-                    <div class="shadow-2xl">
+                    <div class="shadow-2xl border border-black">
                         <form action="" class="text-center p-5">
                             <h3 class="text-2xl font-bold">Register Form</h3>
                             <div class="m-3">
@@ -56,7 +56,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="xs:w-full lg:w-1/2 overflow-y-scroll">
+                <div class="xs:w-full lg:w-1/2 border border-black overflow-x-scroll">
                     <div class="m-5" >
                         <h2 class=" font-bold text-2xl">bill details:</h2>
                         <table class=" shadow-2xl border-2 border-gray-800">
