--- a/table.html
+++ b/table.html
@@ -9,7 +9,7 @@
 </head>
 <body>
             <div class="flex container p-8 mx-auto justify-center flex-wrap">
-                <div class="xs:w-full lg:w-1/2">
+                <div class="xs:w-full lg:w-1/2 shadow-2xl border border-black p-8">
                     <div class="shadow-2xl border border-black">
                         <form action="" class="text-center p-5">
                             <h3 class="text-2xl font-bold">Register Form</h3>
